fdo#37024: SwView::SwView: fix BROWSE_MODE setting:

Apparently there is a check in SwDoc::SetAllUniqueFlyNames so that when
frames with certain anchor types are in a document, then SetLoaded()
is never called.  Checking this flag via IsLoaded() here seems
unnecessary.
This problem was introduced with ebc5777548dea42ed966a16c66d879b1485bbfb4,
from CWS swlayoutrefactoring.